trabajando en javascript intentando no complejizar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </a>
     </div>
 
-    <a class="Boton" href="#" onclick="tienda()">Ingresar a la tienda</a>
+    <a class="Buttom" href="#" onclick="tienda()">Ingresar a la tienda </a>
 </body>
 <script src="index.js"> 
 </script>
